--- a/src/edit.html
+++ b/src/edit.html
@@ -1,41 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Edit Expenses</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
   <style>
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-    }
-
     .expense-row {
       border-bottom: 1px solid #ccc;
       padding: 10px 0;
     }
-
     .back-button {
       margin-top: 20px;
     }
-
     .edit-section {
       display: none;
       margin-top: 10px;
     }
-
-    .btn-edit,
-    .btn-delete {
+    .btn-edit, .btn-delete {
       margin-right: 5px;
     }
   </style>
 </head>
-
-<body style="background-color: lightyellow">
+<body>
   <div class="container mt-4">
     <div class="back-button mb-3">
-      <a href="dashboard.html" class="btn btn-danger">&larr; Back</a>
+      <a href="index.html" class="btn btn-secondary">&larr; Back</a>
     </div>
     <h1 class="text-center text-primary">Edit Expenses</h1>
     <div id="expense-list" class="mt-4"></div>
@@ -53,7 +43,7 @@
           Are you sure you want to delete this expense?
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
           <button type="button" class="btn btn-danger" id="confirm-delete">Delete</button>
         </div>
       </div>
@@ -65,7 +55,7 @@
     const expenseList = document.getElementById("expense-list");
     let expenses = JSON.parse(localStorage.getItem("expenses")) || [];
     let expenseToDeleteIndex = null; // For delete confirmation modal
-    console.log(expenses);
+    //console.log(expenses);
 
     // Function to render the list of expenses
     function renderExpenses() {
@@ -184,8 +174,6 @@
     // Render the list on page load
     renderExpenses();
   </script>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
